// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resetModal snapshot(Draw) 1`] = `
<div
  className="sc-gswNZR bzPwzc"
>
  <div
    className="sc-dkrFOg iUmvDk"
  >
    <p
      className="sc-hLBbgP hbXarv"
    >
      Game Result
    </p>
    <p
      className="sc-eDvSVe eQuYVd"
    >
      Draw!
    </p>
    <button
      className="sc-bcXHqe htMQdM"
      data-cy="reset"
      onClick={[Function]}
      type="submit"
    >
      Game Reset
    </button>
  </div>
</div>
`;

exports[`resetModal snapshot(Player 1) 1`] = `
<div
  className="sc-gswNZR bzPwzc"
>
  <div
    className="sc-dkrFOg iUmvDk"
  >
    <p
      className="sc-hLBbgP hbXarv"
    >
      Game Result
    </p>
    <p
      className="sc-eDvSVe eQuYVd"
    >
      Player 1 win!
    </p>
    <button
      className="sc-bcXHqe htMQdM"
      data-cy="reset"
      onClick={[Function]}
      type="submit"
    >
      Game Reset
    </button>
  </div>
</div>
`;

exports[`resetModal snapshot(Player 2) 1`] = `
<div
  className="sc-gswNZR bzPwzc"
>
  <div
    className="sc-dkrFOg iUmvDk"
  >
    <p
      className="sc-hLBbgP hbXarv"
    >
      Game Result
    </p>
    <p
      className="sc-eDvSVe eQuYVd"
    >
      Player 2 win!
    </p>
    <button
      className="sc-bcXHqe htMQdM"
      data-cy="reset"
      onClick={[Function]}
      type="submit"
    >
      Game Reset
    </button>
  </div>
</div>
`;
